--- a/solution/Dockerfile
+++ b/solution/Dockerfile
@@ -1,8 +1,8 @@
-# Используем базовый образ с JDK 17 для сборки
+# Базовый образ для сборки
 FROM gradle:7.4-jdk-alpine as build
 WORKDIR /workspace/app
 
-# Копируем файлы Gradle и исходный код в образ
+# Копирование исключительно необходимых файлов для сборки
 COPY gradlew .
 COPY gradle gradle
 COPY build.gradle.kts .
@@ -10,25 +10,21 @@ COPY gradle.properties .
 COPY settings.gradle.kts .
 COPY src src
 
-# Выполняем сборку проекта, пропускаем тесты
+# Сборка приложения, исключая тесты
 RUN gradle build -x test --no-daemon
 
-# Удаляем директорию Kotlin Daemon, чтобы избежать ошибок при создании снимка
-RUN rm -rf /root/.gradle /root/.kotlin
-
-# Используем базовый образ с JDK 17 для выполнения
+# Базовый образ для выполнения
 FROM eclipse-temurin:17-jdk-alpine
-VOLUME /tmp
+WORKDIR /app
 
-# Копируем собранный jar файл из предыдущего шага
-COPY --from=build /workspace/app/build/libs/Pulse-0.0.1-all.jar app.jar
+# Копирование только собранного .jar файла
+COPY --from=build /workspace/app/build/libs/Pulse-0.0.1-all.jar ./app.jar
 
-ENV SERVER_ADRESS=0.0.0.0:8080 \
+ENV SERVER_ADDRESS=0.0.0.0:8080 \
     POSTGRES_JDBC_URL=jdbc:postgresql://62.109.21.83:5431/pulse \
     POSTGRES_USERNAME=K0ras1K \
     POSTGRES_PASSWORD=Shah9Sah.
 
 EXPOSE 8080
 
-# Запускаем приложение
-CMD ["sh", "-c", "exec java -jar /app.jar"]
+CMD ["java", "-jar", "app.jar"]
