--- a/solution/Dockerfile
+++ b/solution/Dockerfile
@@ -1,24 +1,24 @@
 # Базовый образ для сборки
-FROM gradle:7.4-jdk-alpine as build
-WORKDIR /workspace/app
+#FROM gradle:7.4-jdk-alpine as build
+#WORKDIR /workspace/app
 
 # Копирование исключительно необходимых файлов для сборки
-COPY gradlew .
-COPY gradle gradle
-COPY build.gradle.kts .
-COPY gradle.properties .
-COPY settings.gradle.kts .
-COPY src src
+#COPY gradlew .
+#COPY gradle gradle
+#COPY build.gradle.kts .
+#COPY gradle.properties .
+#COPY settings.gradle.kts .
+#COPY src src
 
 # Сборка приложения, исключая тесты
-RUN gradle build -x test --no-daemon
+#RUN gradle build -x test --no-daemon
 
 # Базовый образ для выполнения
 FROM eclipse-temurin:17-jdk-alpine
 WORKDIR /app
 
 # Копирование только собранного .jar файла
-COPY --from=build /workspace/app/build/libs/Pulse-0.0.1-all.jar ./app.jar
+COPY /build/libs/Pulse-0.0.1-all.jar ./app.jar
 
 ENV SERVER_ADDRESS=0.0.0.0:8080 \
     POSTGRES_JDBC_URL=jdbc:postgresql://62.109.21.83:5431/pulse \
